@@ -97,3 +97,5 @@
 	* Moved string stuff out of buffer.c into util.c and refactored.
 	* Found problem with short reads, process_script() would delete
 	  actions if they didn't match the partial buffer.
+	* Got rid of redundant 'completion' expect regex.
+	* Took vicebox.dev out of spec file install.
